--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
+    <title>Busines Card</title>
+    <link rel="icon" href="images/icons8-conta-de-teste-64.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <script crossorigin="anonymous" src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js" defer></script>
     <script src="./app.js" defer></script>
