--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="eu" src="/images/gui.jpg" alt="">
         </div>
         <div class="intro-box">
-            <h1 class="intro-text"><span class="animated"></span></h1>
+            <h1 class="intro-text"><span class="animated"></span> 👋</h1>
         </div>
         <div class="menu-container">
             <ul class="social-cards">
@@ -31,12 +31,6 @@
                     <div class="itens" onclick="btnRedesSociais('github')">
                         <img class="icons" src="/icons/icons8-github-branco.svg" alt="">
                         <p>GitHub</p>
-                    </div>
-                </li>
-                <li class="social-card">
-                    <div class="itens" onclick="btnRedesSociais('whatsapp')">
-                        <img class="icons" src="/icons/icons8-whatsapp.svg" alt="">
-                        <p>WhatsApp</p>
                     </div>
                 </li>
                 <li class="social-card">
